Added load-time weaver configuration (for the premerge stage and some integration tests); Moved around some classes, packages to optimize Spring auto-config (more using the defaults during tests).